Style work page desktop styles

--- a/work/kopikaw-overview copy.html
+++ b/work/kopikaw-overview copy.html
@@ -73,6 +73,13 @@
                 id="button-full-width"
                 >Download full style guide</a
               >
+              <a
+                href="https://github.com/hanisno/jubilee-austen"
+                target="_blank"
+                class="button"
+                id="button-full-width"
+                >Source code</a
+              >
             </div>
           </div>
           <figure><img src="../img/preview-kopikaw.png" /></figure>
@@ -98,7 +105,7 @@
           </div>
         </section>
 
-        <section>
+        <section class="main-img">
           <figure><img src="../img/main-img.png" /></figure>
         </section>
         
@@ -150,6 +157,7 @@
                   href="https://github.com/hanisno/jubilee-austen"
                   target="_blank"
                   class="button"
+                  id="button-full-width"
                   >Live Demo</a
                 >
               </div>
