Fix main page stylings

--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@
     <main>
       <section class="hero">
         <div class="content-wrapper">
-          <h1 data-aos="fade-in" data-aos-duration="600">Hey! I'm Hanis.</h1>
+          <h1 data-aos="fade-in" data-aos-duration="600">I'm Hanis &#128075</h1>
           <h2 data-aos="fade-in" data-aos-delay="700" data-aos-duration="600">
-            I’m a web designer and developer and I love making fully custom and
-            stunning websites.
+            A designer and front end developer creating clean and delightful
+            user experiences.
           </h2>
-          <div class="button-container">
-            <a
-              href="#work-section"
-              class="button"
+          <div class="button-container" 
               data-aos="zoom-in"
               data-aos-delay="1400"
               data-aos-duration="600"
-              data-aos-anchor-placement="top"
+              data-aos-anchor-placement="top">
+            <a
+              href="#work-section"
+              class="button"
               >View work</a
             >
           </div>
@@ -117,7 +117,7 @@
         <img src="img/e10.svg" alt="" class="svg-e10" />
       </div>
 
-      <section class="initial-call-to-action">
+      <!--<section class="initial-call-to-action">
         <div class="wrapper-container">
           <div class="content-wrapper">
             <h2 data-aos="fade-in" data-aos-duration="700">
@@ -141,7 +141,7 @@
             </h2>
           </div>
         </div>
-      </section>
+      </section>-->
 
       <section class="work" id="work-section">
         <div class="wrapper-container">
@@ -257,10 +257,7 @@
               <div class="skills-text">
                 <h4>Code</h4>
                 <p>
-                  Whether building from ground-up or refreshing existing pages,
-                  I can help write code that is lean and clean for you -
-                  optimized for mobile-responsiveness, fast loading and ease of
-                  use.
+                 I code using the latest HTML, CSS, JavaScript, and jQuery to develop websites that are mobile-ready, fast, and easy to use.
                 </p>
               </div>
             </article>
@@ -274,9 +271,7 @@
               <div class="skills-text">
                 <h4>Design</h4>
                 <p>
-                  I value stylish and modern designs, with focus on cohesive
-                  blends of typography and content to convey the message that
-                  you want to send.
+                  I use Figma and Illustrator to create stylish, modern, and user-friendly designs to convey the message that you want to send.
                 </p>
               </div>
             </article>
@@ -290,9 +285,7 @@
               <div class="skills-text">
                 <h4>Support</h4>
                 <p>
-                  I can also take care of the technical needs of your website,
-                  be it updates, troubleshooting and maintenance, leaving you
-                  time to do what you love.
+                  I can also take care of your site's updates, troubleshooting, and maintenance, leaving you time to do what you love.
                 </p>
               </div>
             </article>
