Update about page stylings

--- a/about/index.html
+++ b/about/index.html
@@ -19,6 +19,10 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700;900&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/4e12b69c63.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
@@ -50,34 +54,39 @@
     </header>
 
     <main>
-      <section class="about" data-aos="zoom-in" data-aos-duration="1200">
-        <div class="rounded-square-container">
-          <div class="content-wrapper">
-            <div class="about-text">
-              <h1>Hey, I'm Hanis.</h1>
-              <p>
-                I’m a web designer and developer based in Malaysia. I’ve always
-                been fascinated by design and technology, but it wasn’t until
-                recently I realized I wanted to do something that combines the
-                both of these. So I one day sought to teach myself how to make
-                websites from scratch. I’ve since been hooked by the freedom and
-                creativity it allows.
-              </p>
-              <p>
-                I love making websites that not only look beautiful, but are
-                also engaging, fast, easy to use and free from frustration. All
-                these ensure you find success in your business online, no matter
-                your business needs. So if you have a project you’d like to work
-                on with me,
-                <a href="mailto:hanis@hanisnoor.com">let’s get talking!</a>
-              </p>
+      <section class="about">
+        <div
+          class="content-wrapper"
+          data-aos="fade-in"
+          data-aos-duration="1000"
+        >
+          <div class="about-text">
+            <h1>About me</h1>
+            <p>
+              After spending some time soul searching, I decided I needed a
+              change from the industry I graduated in (it was Chemical
+              Engineering, if you're curious!). I enrolled in a few courses, and
+              here I am!
+            </p>
+
+            <p>
+              I enjoy making cool stuff on the internet, bringing my ideas to
+              life and creating websites that not only look nice and clean, but
+              are also engaging, fast and easy to use.
+            </p>
+
+            <p>If you’d like to work with me, let’s get talking!</p>
+            <div class="button-container">
+              <a
+                href="mailto:hanis@hanisnoor.com"
+                class="button"
+                id="button-full-width"
+                ><i class="fas fa-envelope"></i> Send email</a
+              >
             </div>
-            <div class="image-container">
-              <img
-                src="../img/me.png"
-                alt="Photo of me"
-              />
-            </div>
+          </div>
+          <div class="image-container">
+            <img src="../img/profile-picture.png" alt="Photo of me" />
           </div>
         </div>
       </section>
