--- a/index.html
+++ b/index.html
@@ -117,32 +117,6 @@
         <img src="img/e10.svg" alt="" class="svg-e10" />
       </div>
 
-      <!--<section class="initial-call-to-action">
-        <div class="wrapper-container">
-          <div class="content-wrapper">
-            <h2 data-aos="fade-in" data-aos-duration="700">
-              A good website engages a visitor and turns them into customers.
-            </h2>
-            <div
-              class="cta-highlight"
-              data-aos="fade-in"
-              data-aos-duration="500"
-              data-aos-delay="800"
-            >
-              <h2>I can build one for you.</h2>
-            </div>
-            <h2
-              data-aos="fade-in"
-              data-aos-duration="800"
-              data-aos-delay="1800"
-              data-aos-anchor-placement="top"
-            >
-              Continue scrolling to see what I can do.
-            </h2>
-          </div>
-        </div>
-      </section>-->
-
       <section class="work" id="work-section">
         <div class="wrapper-container">
           <h1>Work</h1>
@@ -355,7 +329,7 @@
       data-aos-duration="1200"
       data-aos-once="true"
     >
-      <p>Created with ♥ by <a href="/">Hanis</a></p>
+      <p>Designed and coded by <a href="/">Hanis</a></p>
       <img src="img/waves-footer.svg" alt="" />
     </div>
 
