Remove old work overview CSS and img slides JS

--- a/contact/index.html
+++ b/contact/index.html
@@ -57,7 +57,7 @@
       <section class="contact" data-aos="zoom-in" data-aos-duration="1200">
         <div class="rounded-square-container">
           <div class="content-wrapper">
-            <h1>Say hello</h1>
+            <h1>Say hi &#128075</h1>
             <div class="info-sub" id="email-address">
               <h4>Send me an email</h4>
               <a href="mailto:hanis@hanisnoor.com">hanis@hanisnoor.com</a>
