--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="content-wrapper">
           <h1 data-aos="fade-in" data-aos-duration="600">I'm Hanis &#128075</h1>
           <h2 data-aos="fade-in" data-aos-delay="700" data-aos-duration="600">
-            A designer and front end developer creating clean and delightful
+            A web designer and front end developer creating clean and delightful
             user experiences.
           </h2>
           <div class="button-container" 
