Update work-page with kopikaw and rogue projects

--- a/work/kopikaw-overview.html
+++ b/work/kopikaw-overview.html
@@ -54,85 +54,107 @@
       </div>
     </header>
 
-    <main>
-      <section class="work-overview">
-        <div class="content-wrapper">
-          <h1>Kopikaw Coffee</h1>
-          <div
-            class="image-slides-outer"
-            data-aos="zoom-in"
-            data-aos-duration="1200"
-            data-aos-once="true"
-          >
-            <div class="image-slides-inner">
-              <img
-                src="../img/preview-kopikaw.png"
-                alt="Kopikaw website preview on desktop browser"
-                class="active"
-              />
+    <main id="work-page">
+      <section class="summary">
+          <div class="title">
+            <h1>Kopikaw</h1>
+            <h3>Coffee shop style guide</h3>
+            <p>
+              Kopikaw is a coffee shop concept serving specialty coffee and tea blends with fun and exciting flavors. I designed a brand identity and style guide to support their personality and messaging.
+            </p>
+            <div class="button-container">
+              <a
+                href="https://github.com/hanisno/jubilee-austen"
+                target="_blank"
+                class="button"
+                id="button-full-width"
+                >Download full style guide</a
+              >
+              <a
+                href="https://github.com/hanisno/jubilee-austen"
+                target="_blank"
+                class="button"
+                id="button-full-width"
+                >Source code</a
+              >
             </div>
           </div>
-          <div
-            class="work-overview-text"
-            data-aos="zoom-in"
-            data-aos-duration="1200"
-            data-aos-once="true"
-            data-aos-anchor="top-top"
-          >
-            <div class="work-overview-sub">
-              <h3>Objective</h3>
-              <p>
-                To develop an entire brand identity and a set of design
-                deliverables to launch Kopikaw Coffee shop and support their
-                brand personality and messaging.
-              </p>
+          <figure><img src="../img/kopikaw-preview.jpg" /></figure>
+      </section>
+
+        <section class="mini-detail">
+            <div class="mini-detail-item">
+              <h2>Area</h2>
+              <p>Brand identity</p>
             </div>
-            <div class="work-overview-sub">
-              <h3>Problem</h3>
-              <p>
-                Kopikaw Coffee has funding and a great location in a popular and
-                artsy suburb and now needs a brand that fits their location and
-                unique range of products. They are serving specialty coffee and
-                tea blends as well as a small variety of snacks.
-              </p>
+            <div class="mini-detail-item">
+              <h2>Deliverables</h2>
+              <p>Brand identity, style guide</p>
             </div>
-            <div class="work-overview-sub">
-              <h3>Solution</h3>
-              <p>
-                Build a complete brand identity style guide which includes a
-                cohesive color scheme, logo, typescale, icons, and imagery to
-                capture the energetic, playful, and bold personality of the
-                brand. This will create a strong brand identity that the target
-                audience will love, inspiring trust and loyalty that boosts
-                business.
-              </p>
+            <div class="mini-detail-item">
+              <h2>Platform</h2>
+              <p>Desktop, tablet, mobile</p>
             </div>
-            <div class="work-overview-sub">
-              <h3>Tech</h3>
-              <span>Illustrator</span>
+            <div class="mini-detail-item">
+              <h2>Tech</h2>
+              <p>Illustrator</p>
             </div>
-            <div class="work-overview-sub">
+          </div>
+        </section>
+
+        <section class="main-img">
+          <figure><img src="../img/kopikaw-mockup.jpg" /></figure>
+        </section>
+        
+          <section class="section-text">
+            <h3>Objective</h3>
+            <p>
+              To develop an entire brand identity and a set of design deliverables to launch Kopikaw Coffee shop and support their brand personality and messaging.
+            </p>
+          </section>
+
+          <section class="section-text">
+            <h3>Problem</h3>
+            <p>
+              Kopikaw Coffee has funding and a great location in a popular and artsy suburb and now needs a brand that fits their location and unique range of products. They serve specialty coffee and tea blends as well as a small variety of snacks.
+            </p>
+          </section>
+
+          <section class="section-text">
+            <h3>Solution</h3>
+            <p>
+              Build a complete brand identity style guide which includes a cohesive color scheme, logo, type scale, icons, and imagery to capture the energetic, playful, and bold personality of the brand. This will create a strong brand identity that the target audience will love, inspiring trust and loyalty that boosts business.
+            </p>
+          </section>
+
+          <section class="section-result">
+            <h3>Result</h3>
+            <div class="section-result-content">
               <div class="button-container">
                 <a
-                  href="https://drive.google.com/file/d/1dkCPM4S8-hX2UBq1BA7V5-i1KCP-sjHw/view?usp=sharing"
+                  href="https://github.com/hanisno/jubilee-austen"
                   target="_blank"
                   class="button"
                   id="button-full-width"
-                  >Full Style Guide</a
+                  >Live Demo</a
                 >
               </div>
             </div>
           </div>
-          <div class="pagination">
-            <a href="rogue-pickings-overview.html" class="button"
-              ><i class="fas fa-chevron-left"></i> Prev</a
-            >
-            <a href="jubilee-austen-overview.html" class="button"
-              >Next <i class="fas fa-chevron-right"></i
-            ></a>
-          </div>
-        </div>
-      </section>
+        </section>
+
+        <section><figure><img src="../img/kopikaw-brand-guideline.jpg"class="no-shadow"></figure></section>
+        <section><figure><img src="../img/kopikaw-illustration.jpg"></figure></section>
+        <section><figure><img src="../img/kopikaw-logo-variation.jpg"></figure></section>
+
+        <section class="other-work-links">
+          <h3>Other work</h3>
+          <a href="index.html" class="button" id="button-full-width">All</a>
+          <a href="tea-time-overview.html" class="button" id="button-full-width">Tea Time</a>
+          <a href="nexus-overview.html" class="button" id="button-full-width">Nexus</a>
+          <a href="rogue-pickings-overview.html" class="button" id="button-full-width">Rogue Pickings</a>
+          <a href="jubilee-austen-overview.html" class="button" id="button-full-width">Jubilee Austen</a>
+        </section>
     </main>
 
     <footer>
@@ -179,7 +201,7 @@
       data-aos-duration="1200"
       data-aos-once="true"
     >
-      <p>Created with ♥ by <a href="/">Hanis</a></p>
+      <p>Designed and coded by <a href="/">Hanis</a></p>
       <img src="../img/waves-footer.svg" alt="" />
     </div>
 
