Add nexus work page

--- a/work/nexus-voyage-overview.html
+++ b/work/nexus-voyage-overview.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Kopikaw Coffee - Work Overview</title>
+    <title>Nexus Voyage - Work Overview</title>
     <meta
       name="description"
       content="Portfolio of Hanis Noor, a front-end web designer and developer"
@@ -57,21 +57,21 @@
     <main id="work-page" data-aos="fade-in" data-aos-duration="1000">
       <section class="summary">
           <div class="title">
-            <h1>Kopikaw</h1>
-            <h3>Coffee shop style guide</h3>
+            <h1>Nexus Voyage</h1>
+            <h3>Space travel website development</h3>
             <p>
-              Kopikaw is a coffee shop concept serving specialty coffee and tea blends with fun and exciting flavors. I designed a brand identity and style guide to support their personality and messaging.
+              Nexus Voyage is a conceptual space travel website I coded with HTML and CSS based on a design comp. 
             </p>
             <div class="button-container">
               <a
-                href="https://github.com/hanisno/jubilee-austen"
+                href="https://hanisno.github.io/nexus-voyage/"
                 target="_blank"
                 class="button"
                 id="button-full-width"
-                >Download full style guide</a
+                >Live Demo</a
               >
               <a
-                href="https://github.com/hanisno/jubilee-austen"
+                href="https://github.com/hanisno/nexus-voyage"
                 target="_blank"
                 class="button"
                 id="button-full-width"
@@ -79,17 +79,17 @@
               >
             </div>
           </div>
-          <figure><img src="../img/kopikaw-preview.jpg" /></figure>
+          <figure><img src="../img/nexus-voyage-preview.png" class="no-shadow"/></figure>
       </section>
 
         <section class="mini-detail">
             <div class="mini-detail-item">
               <h2>Area</h2>
-              <p>Brand identity</p>
+              <p>Web development</p>
             </div>
             <div class="mini-detail-item">
               <h2>Deliverables</h2>
-              <p>Brand identity, style guide</p>
+              <p>Live website</p>
             </div>
             <div class="mini-detail-item">
               <h2>Platform</h2>
@@ -97,33 +97,19 @@
             </div>
             <div class="mini-detail-item">
               <h2>Tech</h2>
-              <p>Illustrator</p>
+              <p>HTML, CSS</p>
             </div>
           </div>
         </section>
 
         <section class="main-img">
-          <figure><img src="../img/kopikaw-mockup.jpg" /></figure>
+          <figure><img src="../img/nexus-voyage-device-mockup.jpg" /></figure>
         </section>
         
           <section class="section-text">
             <h3>Objective</h3>
             <p>
-              To develop an entire brand identity and a set of design deliverables to launch Kopikaw Coffee shop and support their brand personality and messaging.
-            </p>
-          </section>
-
-          <section class="section-text">
-            <h3>Problem</h3>
-            <p>
-              Kopikaw Coffee has funding and a great location in a popular and artsy suburb and now needs a brand that fits their location and unique range of products. They serve specialty coffee and tea blends as well as a small variety of snacks.
-            </p>
-          </section>
-
-          <section class="section-text">
-            <h3>Solution</h3>
-            <p>
-              Build a complete brand identity style guide which includes a cohesive color scheme, logo, type scale, icons, and imagery to capture the energetic, playful, and bold personality of the brand. This will create a strong brand identity that the target audience will love, inspiring trust and loyalty that boosts business.
+              I made a fully responsive three-page website using pure HTML and CSS to help the company deliver information about their services to their customers online. It is developed based on a given design comp.
             </p>
           </section>
 
@@ -132,7 +118,7 @@
             <div class="section-result-content">
               <div class="button-container">
                 <a
-                  href="https://github.com/hanisno/jubilee-austen"
+                  href="https://hanisno.github.io/nexus-voyage/"
                   target="_blank"
                   class="button"
                   id="button-full-width"
@@ -143,9 +129,7 @@
           </div>
         </section>
 
-        <section><figure><img src="../img/kopikaw-brand-guideline.jpg"class="no-shadow"></figure></section>
-        <section><figure><img src="../img/kopikaw-illustration.jpg"></figure></section>
-        <section><figure><img src="../img/kopikaw-logo-variation.jpg"></figure></section>
+        <section><figure><img src="../img/nexus-voyage-browser-mockup.png" class="no-shadow"></figure></section>
 
         <section class="other-work-links">
           <h3>Other work</h3>
@@ -155,6 +139,7 @@
           <a href="tea-time-overview.html" class="button" id="button-full-width">Tea Time</a>
           <a href="nexus-voyage-overview.html" class="button" id="button-full-width">Nexus Voyage</a>
           <a href="rogue-pickings-overview.html" class="button" id="button-full-width">Rogue Pickings</a>
+          
         </section>
     </main>
 
