--- a/work/rogue-pickings-overview.html
+++ b/work/rogue-pickings-overview.html
@@ -54,7 +54,7 @@
       </div>
     </header>
 
-    <main id="work-page">
+    <main id="work-page" data-aos="fade-in" data-aos-duration="1000">
       <section class="summary">
           <div class="title">
             <h1>Rogue Pickings</h1>
@@ -137,7 +137,7 @@
           <a href="kopikaw-overview.html" class="button" id="button-full-width">Kopikaw</a>
           <a href="sit-conmigo-overview.html" class="button" id="button-full-width">Sit Conmigo</a>
           <a href="tea-time-overview.html" class="button" id="button-full-width">Tea Time</a>
-          <a href="nexus-overview.html" class="button" id="button-full-width">Nexus</a>
+          <a href="nexus-voyage-overview.html" class="button" id="button-full-width">Nexus Voyage</a>
           <a href="rogue-pickings-overview.html" class="button" id="button-full-width">Rogue Pickings</a>
           
         </section>
