Add tea time work page

--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
                 </div>
               </article>
             </a>
-            <a href="work/nexus-overview.html">
+            <a href="work/nexus-voyage-overview.html">
               <article id="article-b" data-aos-delay="300">
                 <img
-                  src="img/nexus-preview.png"
-                  alt="Nexus website previews on desktop and phone browsers"
+                  src="img/nexus-voyage-preview.png"
+                  alt="Nexus voyage website previews on desktop and phone browsers"
                   data-aos="fade-left"
                   data-aos-duration="1500"
                 />
@@ -158,10 +158,10 @@
                   data-aos="fade-in"
                   data-aos-duration="1500"
                 >
-                  <h3>Nexus</h3>
+                  <h3>Nexus Voyage</h3>
                   <span>Web Development</span>
                   <p>
-                    Nexus is a space travel website concept that is coded with
+                    Nexus Voyage is a space travel website concept that is coded with
                     HTML and CSS. It is fully responsive across mobile, tablet
                     and desktop devices.
                   </p>
@@ -194,7 +194,7 @@
             <a href="work/kopikaw-overview.html">
               <article id="article-b" data-aos-delay="700">
                 <img
-                  src="img/preview-kopikaw.png"
+                  src="img/kopikaw-preview.jpg"
                   alt="Kopikaw logo preview"
                   data-aos="fade-left"
                   data-aos-duration="1500"
