--- a/work/nexus-voyage-overview.html
+++ b/work/nexus-voyage-overview.html
@@ -107,7 +107,7 @@
         </section>
         
           <section class="section-text">
-            <h3>Objective</h3>
+            <h3>Description</h3>
             <p>
               I made a fully responsive three-page website using pure HTML and CSS to help the company deliver information about their services to their customers online. It is developed based on a given design comp.
             </p>
@@ -139,7 +139,6 @@
           <a href="tea-time-overview.html" class="button" id="button-full-width">Tea Time</a>
           <a href="nexus-voyage-overview.html" class="button" id="button-full-width">Nexus Voyage</a>
           <a href="rogue-pickings-overview.html" class="button" id="button-full-width">Rogue Pickings</a>
-          
         </section>
     </main>
 
