--- a/work/tea-time-overview.html
+++ b/work/tea-time-overview.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Rogue Pickings - Work Overview</title>
+    <title>Tea Time - Work Overview</title>
     <meta
       name="description"
       content="Portfolio of Hanis Noor, a front-end web designer and developer"
@@ -57,21 +57,21 @@
     <main id="work-page" data-aos="fade-in" data-aos-duration="1000">
       <section class="summary">
           <div class="title">
-            <h1>Rogue Pickings</h1>
-            <h3>Food truck webpage development</h3>
+            <h1>Tea Time</h1>
+            <h3>Interactive JavaScript clock</h3>
             <p>
-              Rogue Pickings is a one-page site for a sample food truck company. I developed this mobile-friendly webpage using HTML and CSS.
+              Tea Time is an interactive JavaScript clock I coded that suggests a type of tea based on user input.
             </p>
             <div class="button-container">
               <a
-                href="https://hanisno.github.io/rogue-pickings/"
+                href="https://hanisno.github.io/tea-time/"
                 target="_blank"
                 class="button"
                 id="button-full-width"
                 >Live Demo</a
               >
               <a
-                href="https://github.com/hanisno/rogue-pickings"
+                href="https://github.com/hanisno/tea-time"
                 target="_blank"
                 class="button"
                 id="button-full-width"
@@ -79,7 +79,7 @@
               >
             </div>
           </div>
-          <figure><img src="../img/rogue-pickings-preview.png" class="no-shadow"/></figure>
+          <figure><img src="../img/tea-time-preview.png" class="no-shadow"/></figure>
       </section>
 
         <section class="mini-detail">
@@ -97,19 +97,19 @@
             </div>
             <div class="mini-detail-item">
               <h2>Tech</h2>
-              <p>HTML, CSS</p>
+              <p>HTML, CSS, JavaScript</p>
             </div>
           </div>
         </section>
 
         <section class="main-img">
-          <figure><img src="../img/rogue-pickings-device-mockup.jpg" /></figure>
+          <figure><img src="../img/tea-time-device-mockup.jpg" /></figure>
         </section>
         
           <section class="section-text">
             <h3>Description</h3>
             <p>
-              I coded this one-page site based on a design comp. It is fully responsive on mobile, tablet and desktop screens and will help customers discover the company’s offering and menu.
+              Tea Time is a JavaScript-based interactive clock I developed that suggests a type of tea based on the time of the day. Users can select custom tea times or click on the "Thirs-tea?" button for a special drink suggestion. Its basic functionality is inspired by the LOLCat Clock but personalized to my liking of tea. It is mobile and tablet friendly.
             </p>
           </section>
 
@@ -118,7 +118,7 @@
             <div class="section-result-content">
               <div class="button-container">
                 <a
-                  href="https://hanisno.github.io/rogue-pickings/"
+                  href="https://hanisno.github.io/tea-time/"
                   target="_blank"
                   class="button"
                   id="button-full-width"
@@ -129,7 +129,7 @@
           </div>
         </section>
 
-        <section><figure><img src="../img/rogue-pickings-browser-mockup.png" class="no-shadow"></figure></section>
+        <section><figure><img src="../img/tea-time-browser-mockup.png" class="no-shadow"></figure></section>
 
         <section class="other-work-links">
           <h3>Other work</h3>
@@ -139,7 +139,6 @@
           <a href="tea-time-overview.html" class="button" id="button-full-width">Tea Time</a>
           <a href="nexus-voyage-overview.html" class="button" id="button-full-width">Nexus Voyage</a>
           <a href="rogue-pickings-overview.html" class="button" id="button-full-width">Rogue Pickings</a>
-          
         </section>
     </main>
 
