Update main and work page

--- a/about/index.html
+++ b/about/index.html
@@ -65,7 +65,7 @@
             <p>
               After spending some time soul searching, I decided I needed a
               change from the industry I graduated in (it was Chemical
-              Engineering, if you're curious!). I enrolled in a few courses, and
+              Engineering, if you're curious). I enrolled in a few courses, and
               here I am!
             </p>
 
