--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                   <h3>Rogue Pickings</h3>
                   <span>Web Development</span>
                   <p>
-                    Rogue Pickings is a sample site for a food truck company. It
-                    features a responsive one-page website coded using HTML and
+                    Rogue Pickings is a sample page for a food truck company. It
+                    features a responsive one-page site coded using HTML and
                     CSS.
                   </p>
                 </div>
@@ -194,7 +194,7 @@
             <a href="work/kopikaw-overview.html">
               <article id="article-b" data-aos-delay="700">
                 <img
-                  src="img/kopikaw-preview.jpg"
+                  src="img/kopikaw-preview-main.png"
                   alt="Kopikaw logo preview"
                   data-aos="fade-left"
                   data-aos-duration="1500"
@@ -204,7 +204,7 @@
                   data-aos="fade-in"
                   data-aos-duration="1500"
                 >
-                  <h3>Kopikaw Coffee</h3>
+                  <h3>Kopikaw</h3>
                   <span>Brand Identity</span>
                   <p>
                     Kopikaw is a coffee shop concept. It features a full brand
