--- a/work/index.html
+++ b/work/index.html
@@ -82,11 +82,11 @@
                 </div>
               </article>
             </a>
-            <a href="nexus-overview.html">
+            <a href="nexus-voyage-overview.html">
               <article id="article-b" data-aos-delay="300">
                 <img
-                  src="../img/nexus-preview.png"
-                  alt="Nexus website previews on desktop and phone browsers"
+                  src="../img/nexus-voyage-preview.png"
+                  alt="Nexus voyage website previews on desktop and phone browsers"
                   data-aos="fade-left"
                   data-aos-duration="1500"
                 />
@@ -95,12 +95,12 @@
                   data-aos="fade-in"
                   data-aos-duration="1500"
                 >
-                  <h3>Nexus</h3>
+                  <h3>Nexus Voyage</h3>
                   <span>Web Development</span>
                   <p>
-                    Nexus is a space travel website concept that is coded with
-                    HTML and CSS. It is fully responsive across mobile, tablet
-                    and desktop devices.
+                    Nexus Voyage is a space travel website concept that is coded
+                    with HTML and CSS. It is fully responsive across mobile,
+                    tablet and desktop devices.
                   </p>
                 </div>
               </article>
@@ -121,8 +121,8 @@
                   <h3>Rogue Pickings</h3>
                   <span>Web Development</span>
                   <p>
-                    Rogue Pickings is a sample site for a food truck company. It
-                    features a responsive one-page website coded using HTML and
+                    Rogue Pickings is a sample page for a food truck company. It
+                    features a responsive one-page site coded using HTML and
                     CSS.
                   </p>
                 </div>
@@ -131,7 +131,7 @@
             <a href="kopikaw-overview.html">
               <article id="article-b" data-aos-delay="700">
                 <img
-                  src="../img/preview-kopikaw.png"
+                  src="../img/kopikaw-preview-main.png"
                   alt="Kopikaw preview"
                   data-aos="fade-left"
                   data-aos-duration="1500"
@@ -141,35 +141,13 @@
                   data-aos="fade-in"
                   data-aos-duration="1500"
                 >
-                  <h3>Kopikaw Coffee</h3>
+                  <h3>Kopikaw</h3>
                   <span>Brand Identity</span>
                   <p>
                     Kopikaw is a coffee shop concept. It features a full brand
                     identity guideline which includes the color scheme, logo,
                     typescale, and imagery to support the brand personality and
                     messaging.
-                  </p>
-                </div>
-              </article>
-            </a>
-            <a href="jubilee-austen-overview.html">
-              <article data-aos-delay="900">
-                <img
-                  src="../img/jubilee-austen-preview.png"
-                  alt="Jubilee Austen website preview on desktop browser"
-                  data-aos="fade-right"
-                  data-aos-duration="1500"
-                />
-                <div
-                  class="work-text"
-                  data-aos="fade-in"
-                  data-aos-duration="1500"
-                >
-                  <h3>Jubilee Austen</h3>
-                  <span>Web Development</span>
-                  <p>
-                    Jubilee Austen is a portfolio concept for a web developer.
-                    HTML and CSS was used to create a static website.
                   </p>
                 </div>
               </article>
@@ -223,7 +201,7 @@
       data-aos-duration="1200"
       data-aos-once="true"
     >
-      <p>Created with ♥ by <a href="/">Hanis</a></p>
+      <p>Designed and coded by <a href="/">Hanis</a></p>
       <img src="../img/waves-footer.svg" alt="" />
     </div>
 
